changes to web resume

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
                 <div class="well">
                     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
                     <p>
-                        <center><a href="#" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
+                        <center><a href="index2.html" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
                     </p>
                     <p>
                         <center><a href="#" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
@@ -81,13 +81,14 @@ body {
                     <p>HTML | CSS | Bootstrap</p>
                     <p>JavaScript | NodeJS | Express</p>
                     <p>React | React Native
-                    <p>MongoDB| Git | Deployment</p>
+                    <p>MongoDB | Git | Deployment</p>
                     <hr>
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
                     <b>Other Skills</b>
+                    <p></p>
                     <p>Python | Django | PostgreSQL</p>
                     <p>Java | Spring | JSP | Maven</p>
                     <p>Docker | AWS | WordPress</p>                    
@@ -111,7 +112,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="#" target="_blank" style="color:black">HTML/CSS Resume</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="index2.html" target="_blank" style="color:black">HTML/CSS Resume</a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br> -->
                     <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br> -->
