--- a/index2.html
+++ b/index2.html
@@ -255,13 +255,16 @@
                         <hr>
                         <ul>
                             <li>HTML | CSS | Bootstrap</li>
-                            <li>JS | JSON | NodeJS</li>
+                            
                             <li>Java | JSP | Spring | Maven</li>
+                            <li>Javascript | NodeJS | Express</li>
                             <li>MySQL | PostgreSQL</li>
-                            <li>Python | Django</li>
-                            <li>Git | Docker | AWS | WordPress</li>
+                            <li>React | React Native</li>
+                            <li>Docker | AWS | Wordpress</li>
+                            <li>MongoDB | Git | Deployment</li>
                             <li>Lightroom | Photoshop</li>
-                            <li>Linux | CCNA commands</li>
+                            <li>Python | Django | PostgreSQL</li>
+                            <li>Linux | CCNA</li>
                         </ul>
                     </div>
                 </section>
@@ -272,15 +275,17 @@
                             <h2>Mini Projects</h2>
                         </hgroup>
                         <ul>
-                            <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github</a></li>
-                            <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website</a></li>
-                            <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Static Website I</a></li>
-                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Static Website II</a></li>
-                            <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Online Links</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" style="color:black">WordPress Defunct Site Backup</a></li>
-                            <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS a Website</a></li>
-                            <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>
-                            <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Photography Portfolio</a></li>
+                            <li><a href="certificates.html" target="_blank" style="color:black"> Full Stack Certificates</a></li>
+                            <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a></li>
+                            <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a></li>
+                            <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a></li>
+                            <li><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React - Nucampsite </a></li>
+                            <li><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a></li>
+                            <li><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a></li>
+                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a></li>
+                            <li><a href="#" target="_blank" style="color:black">HTML/CSS Resume</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a></li>
+                            <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a></li>
                         </ul>
                     </article>
                 </section>
