--- a/index2.html
+++ b/index2.html
@@ -234,7 +234,7 @@
                 <a href="https://sachinkrb.github.io/">HOME</a>
                 <a href="https://sachinkrb.github.io/skeleton-test/index.html">COLLECTIONS/LINKS</a>
                 <a href="https://sachinkrb.github.io/index3.html">CREATING PROTOTYPE FOR DJANGO PROJECT</a>
-                <a href="SachinsResume.pdf" download>DOWNLOAD PDF VERSION</a>
+                <a href="#" download>DOWNLOAD PDF VERSION</a>
                 <a href="#" onclick="viewSource()">VIEW PAGE SOURCE</a>
                 <a href="https://github.com/sachinkrb">MY GITHUB</a>
             </div>
@@ -356,6 +356,13 @@
                 <section>
                     <h1>Education</h1>
                     <article>
+                        <hgroup>
+                            <h1>Nucamp Bootcamp Co. </h1>
+                            <p>2021 - 2021</p>
+                        </hgroup>
+                        <ul>
+                            <li>Full Stack Web & Mobile Development Certificate</li>
+                        </ul>
                         <hgroup>
                             <h1>University of the People (UoPeople) - Pasadena, CA </h1>
                             <p>2020 - Current</p>
