Few changes to index and index2

--- a/index2.html
+++ b/index2.html
@@ -275,7 +275,7 @@
                             <h2>Mini Projects</h2>
                         </hgroup>
                         <ul>
-                            <li><a href="certificates.html" target="_blank" style="color:black"> Full Stack Certificates</a></li>
+                            <li><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a></li>
                             <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a></li>
                             <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a></li>
                             <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a></li>
