--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h4>
-                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Full Stack Certificates</a><br> 
+                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a><br> 
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a><br>
