Grammar changes from linkedin resume

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ body {
                     <b>Main Skills</b>
                     <p></p>
                     <p>HTML | CSS | Bootstrap</p>
-                    <p>JavaScript | NodeJS | Express</p>
+                    <p>JavaScript | Node.js | Express.js</p>
                     <p>React | React Native
-                    <p>MongoDB | Git | Deployment</p>
+                    <p>MongoDB</p>
                     <hr>
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -122,15 +122,15 @@ body {
                     <h4><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h4>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
-                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues. Working as Product Expert support contractor for Intuit TurboTax.</p>
+                    <p>Working as a customer service contractor for Bath & Body Works with sales/account/post-sales issues. Worked as Product Expert support contractor for Intuit TurboTax.</p>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
-                    <p>Troubleshooted software and hardware issues on all Apple products. Meticulously followed Apple Internal Use Only articles. Reported all new bugs and customer's complaints.</p>
+                    <p>Troubleshoot software and hardware issues on all Apple products. Meticulously followed Apple Internal Use Only articles. Reported all new bugs and customer's complaints.</p>
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Collaborated on redesigning an old website. Recoded assigned tasks for pages. Successfully closed QA bug tickets. Project ended prematurely for the reallocation of the budget.</p>
+                    <p>Collaborated on redesigning an old website. Recoded assigned tasks for pages. Successfully closed QA bug tickets. Project ended prematurely for the reevaluation of the budget.</p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
@@ -138,7 +138,7 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - MNSU IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration, troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. </p>
+                    <p>Assisted in deployment, configuration, troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students in working with various Microsoft products. </p>
                     <hr>
 
                     <!-- Education -->
@@ -146,7 +146,7 @@ body {
                     <h4><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h4>
                     <h5><b>Nucamp Bootcamp</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2021 </h6>
-                    <p>FullStack Web & Mobile Development Certificate</p>
+                    <p>Full-Stack Web & Mobile Development Certificate</p>
                     <h5><b>University of the People, Pasadena, CA</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
                     <p>Associate in Computer Science</p>
