--- a/index2.html
+++ b/index2.html
@@ -261,7 +261,7 @@
                             <li>MySQL | PostgreSQL</li>
                             <li>React | React Native</li>
                             <li>Docker | AWS | Wordpress</li>
-                            <li>MongoDB | Git | Deployment</li>
+                            <li>MongoDB</li>
                             <li>Lightroom | Photoshop</li>
                             <li>Python | Django | PostgreSQL</li>
                             <li>Linux | CCNA</li>
@@ -297,9 +297,9 @@
                             <p>August 2019 – Current</p>
                         </hgroup>
                         <ul>
-                            <li>Working as an independent customer service contractor for Bath & Body Works and Intuit TurboTax.</li>
+                            <li>Working as customer service contractor for Bath & Body Works and Intuit TurboTax.</li>
                             <li>Resolving sales/accounts/post-sales issues & product expert support.</li>
-                            <li>Working as Product Expert Support contractor for Intuit TurboTax.</li>
+                            <li>Worked as Product Expert Support contractor for Intuit TurboTax.</li>
                         </ul>
                     </article>
                     <article>
