--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@ body {
             <div class="col-sm-4 ">
                 <div class="well">
                     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
-                    <p>
+                    <!-- <p>
                         <center><a href="index2.html" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
-                    </p>
+                    </p> -->
+                    <hr>
                     <p>
-                        <center><a href="#" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
+                        <center><a href="Resume New.pdf" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
                     </p>
                     <hr>
                     <h4>Sachin Rajbhandari</h4>
@@ -94,6 +95,7 @@ body {
                     <p>Docker | AWS | WordPress</p>                    
                     <p>Lightroom | Photoshop</p>
                     <p>Linux | CCNA</p>
+                    <hr>
                     
                    
   
