update links source code

--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     html {
         font-size: 16px;
@@ -85,7 +86,7 @@
 
     .resume-frame-1 header h2:after {
         padding: 1em;
-        content: "	"
+        content: "  "
     }
 
     .resume-frame-1 .resume-frame-2 {
@@ -255,13 +256,12 @@
                         <hr>
                         <ul>
                             <li>HTML | CSS | Bootstrap</li>
-                            
                             <li>Java | JSP | Spring | Maven</li>
-                            <li>Javascript | NodeJS | Express</li>
+                            <li>Javascript | Node.js | Express.js</li>
                             <li>MySQL | PostgreSQL</li>
-                            <li>React | React Native</li>
+                            <li>React.js | Redux | React Native</li>
                             <li>Docker | AWS | Wordpress</li>
-                            <li>MongoDB</li>
+                            <li>MongoDB | Webpack</li>
                             <li>Lightroom | Photoshop</li>
                             <li>Python | Django | PostgreSQL</li>
                             <li>Linux | CCNA</li>
@@ -277,13 +277,14 @@
                         <ul>
                             <li><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a></li>
                             <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a></li>
-                            <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 1 - Nucampsite</a></li>
-                            <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap Ver 2 - Nucampsite</a></li>
-                            <li><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React - Nucampsite </a></li>
-                            <li><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography</a></li>
-                            <li><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I</a></li>
-                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II</a></li>
-                            <li><a href="#" target="_blank" style="color:black">HTML/CSS Resume</a></li>
+                            <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a></li>
+                            <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 2.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap_new" target="_blank" style="color:black"> Source code </a></li>
+                            <li><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/personal_bootstrap_project" target="_blank" style="color:black"> Source code </a></li>
+                            <li><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React.js/Redux/JSON - Nucampsite </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucampsite_react_redux" target="_blank" style="color:black"> Source code </a></li>
+                            
+                            <li><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index3.html" target="_blank" style="color:black"> Source code </a></li>
+                            <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/Learning_Grids" target="_blank" style="color:black"> Source code </a></li>
+                            <li><a href="#" target="_blank" style="color:black">HTML/CSS Resume </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index2.html" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a></li>
                             <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a></li>
                         </ul>
