--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
             <!-- Right Column -->
             <div class="col-sm-8">
                 <div class="well">
-                    <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Mini Projects</h4>
+                    <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i>PROJECT PORTFOLIO</h4>
                     <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a><br>
