--- a/index.html
+++ b/index.html
@@ -95,27 +95,29 @@ body {
                         <p>Docker | AWS | WordPress</p>
                         <p>Lightroom | Photoshop</p>
                         <p>Linux | CCNA</p>
-                        <hr>
+                        <hr><br><br><br>
                 </div>
                 <!-- End Left Column -->
             </div>
             <!-- Right Column -->
             <div class="col-sm-8">
                 <div class="well">
-                    <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i>PROJECT PORTFOLIO</h4>
-                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a><br>
+                    <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Project Portfolio</h4>
+                     <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Projects with Source Codes</h5>
                     <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 2.0 </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap_new" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/personal_bootstrap_project" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React.js/Redux/JSON - Nucampsite </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucampsite_react_redux" target="_blank" style="color:black"> Source code </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index3.html" target="_blank" style="color:black"> Source code </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/Learning_Grids" target="_blank" style="color:black"> Source code </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Landing Page I </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index3.html" target="_blank" style="color:black"> Source code </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Landing Page II </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/Learning_Grids" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="index2.html" target="_blank" style="color:black">HTML/CSS Resume </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index2.html" target="_blank" style="color:black"> Source code </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br> -->
+                     <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Others </h5>
+                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Repos</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Nucamp Bootcamp Certificates</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br> -->
-                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio </a>
                     <hr>
                     <h4><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h4>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
