--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {
                      <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Others </h5>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Repos</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Nucamp Bootcamp Certificates</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats.com Backup </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS a Website</a><br> -->
                     <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio </a>
                     <hr>
